--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,7 +21,7 @@ jobs:
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag spark_app:latest
+      run: docker build . --file dockerfile --tag spark_app
 
     - name: Push to Docker Hub
       run: docker push faznifarook/spark_app:latest
